// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Characters Robot renders confusion marks and flower if female fox is in default pose 1`] = `
.c0 {
  padding: 0;
  padding-bottom: 3rem;
  position: relative;
  padding-top: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:26.25em) {
  .c0 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
>
  <Frame>
    <FoxArtwork
      pose="default"
    />
    <Tail />
  </Frame>
  <ConfusionMarks />
  <GenderFlower
    isVisible={true}
  />
</div>
`;

exports[`COMPONENT - Characters Robot renders confusion marks if fox is in default pose 1`] = `
.c0 {
  padding: 0;
  padding-bottom: 3rem;
  position: relative;
  padding-top: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:26.25em) {
  .c0 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
>
  <Frame>
    <FoxArtwork
      pose="default"
    />
    <Tail />
  </Frame>
  <ConfusionMarks />
  <GenderFlower
    isVisible={false}
  />
</div>
`;

exports[`COMPONENT - Characters Robot renders correctly with default props 1`] = `
.c0 {
  padding: 0;
  padding-bottom: 3rem;
  position: relative;
  padding-top: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:26.25em) {
  .c0 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
>
  <Frame>
    <FoxArtwork
      pose="default"
    />
    <Tail />
  </Frame>
  <ConfusionMarks />
  <GenderFlower
    isVisible={false}
  />
</div>
`;

exports[`COMPONENT - Characters Robot renders flower if female gender is passed 1`] = `
.c0 {
  padding: 0;
  padding-bottom: 3rem;
  position: relative;
  padding-top: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:26.25em) {
  .c0 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
>
  <Frame>
    <FoxArtwork
      pose="default"
    />
    <Tail />
  </Frame>
  <ConfusionMarks />
  <GenderFlower
    isVisible={true}
  />
</div>
`;
